# fa-journaliser

./: .gitignore  journal_info.py  main.py  pyproject.toml
fa_journaliser/: database.py  download.py  journal.py  journal_info.py  journey.py  prom.py  utils.py
